@@ -43,7 +43,8 @@ EXTRA_DIST = \
     rts2.target.xml \
     rts2-newtarget.xml \
     rts2-plan.xml \
-    rts2-selector.xml
+    rts2-selector.xml \
+    rts2-queue.xml
 
 CLEANFILES = *.1 *.5 *.7
 
@@ -91,7 +92,8 @@ man_MANS = \
     rts2.target.5 \
     rts2-newtarget.1 \
     rts2-plan.1 \
-    rts2-selector.7
+    rts2-selector.7 \
+    rts2-queue.1
 
 XP=xsltproc --nonet
 
